project structure prepared

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/parent_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="codeview.apps.dndcallblocker.MainActivity">
+    tools:context="codeview.apps.dndcallblocker.view.activity.MainActivity">
 
+    <Button
+        android:layout_margin="@dimen/margin_std"
+        android:id="@+id/dnd_button"
+        android:text="Enable DND"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
