--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#525151</color>
+    <color name="colorPrimaryDark">#3C3C3C</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#fff</color>
+    <color name="whiteBackground">#FF0000</color>
+    <color name="colorRipple">#afafaf</color>
+    <color name="lightGray">#606060</color>
 </resources>
