--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#fff</color>
     <color name="whiteBackground">#FF0000</color>
-    <color name="colorRipple">#afafaf</color>
+    <color name="colorGreen">#00c403</color>
+    <color name="colorRipple">#c4c2c2</color>
     <color name="lightGray">#606060</color>
+    <color name="veryLightGray">#9b9b9b</color>
+
 </resources>
