--- a/app/src/main/res/drawable/recycler_divider.xml
+++ b/app/src/main/res/drawable/recycler_divider.xml
@@ -1,10 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <size
-        android:width="1dp"
-        android:height="0.5dp" />
-    <solid android:color="@color/lightGray" />
-
+    <solid android:color="@color/veryLightGray"/>
+    <size android:height="0.4dp"/>
 </shape>
