--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="codeview.apps.dndcallblocker.view.activity.MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -19,6 +20,8 @@
             android:layout_height="match_parent">
 
             <ImageButton
+                android:id="@+id/pro_button"
+                android:padding="5dp"
                 android:layout_gravity="end"
                 android:layout_margin="16dp"
                 android:src="@drawable/crown"
@@ -29,7 +32,6 @@
 
 
             <LinearLayout
-
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -43,7 +45,7 @@
                     android:background="?attr/selectableItemBackgroundBorderless" />
 
                 <TextView
-                    android:textStyle="bold"
+                    android:fontFamily="@font/barlow_bold"
                     android:textColor="@color/colorPrimary"
                     android:id="@+id/blocking_text"
                     android:textSize="18sp"
@@ -153,6 +155,15 @@
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
+
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/main_banner_ad"
+                    android:layout_marginTop="@dimen/margin_std"
+                    android:layout_gravity="center_horizontal"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="@string/main_screen_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
