room database integrated and designed UI of 2 screens

--- a/app/src/main/res/layout/activity_add_blacklist.xml
+++ b/app/src/main/res/layout/activity_add_blacklist.xml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parent_layout"
+    android:background="@drawable/background"
     tools:context="codeview.apps.dndcallblocker.view.activity.AddBlacklistActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
+        android:id="@+id/blacklist_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
+        android:layout_margin="@dimen/margin_std"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:fontFamily="@font/barlow_semibold"
+        android:text="No blacklisted numbers to show"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_blacklist_fab"
+        style="@style/FabStyle"
+        app:fabSize="normal"
+        android:src="@drawable/add_icon_fab"
+        android:layout_margin="24dp"
+        android:layout_gravity="end|bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+</android.support.design.widget.CoordinatorLayout>
