--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <dimen name="margin_std">15dp</dimen>
-
+    <dimen name="small_text">13sp</dimen>
+    <dimen name="medium_text">15sp</dimen>
+    <dimen name="large_text">18sp</dimen>
 </resources>
