--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
+
+
                         <TextView
                             android:textSize="18sp"
                             android:layout_weight="1"
@@ -131,6 +133,7 @@
                     android:layout_height="wrap_content">
 
                     <LinearLayout
+                        android:id="@+id/create_blacklist"
                         android:clickable="true"
                         android:focusable="true"
                         android:background="?attr/selectableItemBackgroundBorderless"
