--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,12 @@
                         <TextView
                             android:textSize="18sp"
                             android:layout_weight="1"
-                            android:text="Show Notifications"
+                            android:text="@string/show_notifications"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
 
                         <Switch
+                            android:id="@+id/show_notif_switch"
                             android:theme="@style/SwitchTheme"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -106,16 +107,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-
-
                         <TextView
                             android:textSize="18sp"
                             android:layout_weight="1"
-                            android:text="Block messages"
+                            android:text="@string/block_incoming_sms"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
 
                         <Switch
+                            android:id="@+id/block_incoming_sms_switch"
                             android:theme="@style/SwitchTheme"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -126,6 +126,49 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    app:cardBackgroundColor="@color/colorWhite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_gravity="center"
+                        android:paddingStart="@dimen/margin_std"
+                        android:paddingEnd="@dimen/margin_std"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:textSize="18sp"
+                            android:layout_weight="1"
+                            android:text="@string/block_call_with_sms"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
+
+                        <Switch
+                            android:id="@+id/block_with_sms_switch"
+                            android:theme="@style/SwitchTheme"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/main_banner_ad"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center_horizontal"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="@string/main_screen_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <android.support.v7.widget.CardView
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     app:cardBackgroundColor="@color/colorWhite"
@@ -150,7 +193,7 @@
                             android:textSize="18sp"
                             android:layout_weight="1"
                             android:drawableEnd="@drawable/arrow_right"
-                            android:text="Create your black-list"
+                            android:text="@string/blacklist_numbers"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:drawableRight="@drawable/arrow_right" />
@@ -159,14 +202,7 @@
 
                 </android.support.v7.widget.CardView>
 
-                <com.google.android.gms.ads.AdView
-                    android:id="@+id/main_banner_ad"
-                    android:layout_marginTop="@dimen/margin_std"
-                    android:layout_gravity="center_horizontal"
-                    ads:adSize="BANNER"
-                    ads:adUnitId="@string/main_screen_banner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+
 
             </LinearLayout>
 
