--- a/app/src/main/res/layout/seperator_light.xml
+++ b/app/src/main/res/layout/seperator_light.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View
-    android:background="@color/lightGray"
+    android:background="@color/veryLightGray"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="0.5dp">
