--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="whiteBackground">#FF0000</color>
     <color name="colorGreen">#75D116</color>
     <color name="colorRipple">#c4c2c2</color>
+    <color name="darkWhite">#EEEEEE</color>
     <color name="lightGray">#606060</color>
     <color name="veryLightGray">#9b9b9b</color>
 
