--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
 
     <dimen name="margin_std">15dp</dimen>
     <dimen name="small_text">13sp</dimen>
+    <dimen name="very_small_text">11sp</dimen>
     <dimen name="medium_text">15sp</dimen>
     <dimen name="large_text">18sp</dimen>
 </resources>
