--- a/app/src/main/res/layout/row_contact.xml
+++ b/app/src/main/res/layout/row_contact.xml
@@ -52,6 +52,7 @@
         android:textSize="@dimen/medium_text" />
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_marginEnd="5dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
